--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
+    "@prisma/client": "^4.8.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "prisma": "^4.8.1"
+  },
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts"
+  },
+  "name": "Backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "gabrielol113 <gabrielol.113@hotmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   }
 }
