--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "@prisma/client": "^4.8.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.1"
   },
   "scripts": {
@@ -15,8 +18,10 @@
   "author": "gabrielol113 <gabrielol.113@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
